# ray-marching

./: Cargo.toml  README.md
examples/: perf.rs
iterators/: Cargo.toml
iterators/proptest-regressions/: multi_dims.txt  multi_range_iter.txt
iterators/src/: lib.rs  multi_dims.rs  multi_range_iter.rs  par_iter.rs
rays/: Cargo.toml
rays/src/: lib.rs
rays/src/marcher/: mod.rs  sphere_march.rs
rays/src/rays/: cameras.rs  mod.rs  screens.rs
rays/src/renderer/: colour.rs  material.rs  mod.rs  occlusion.rs  pbr.rs  solid.rs
rays/src/sources/: cameras.rs
sdf/: Cargo.toml
sdf/src/: interpolate.rs  lib.rs
sdf/src/items/: cube.rs  cuboid.rs  cylinder.rs  middle.rs  mod.rs  plane.rs  sphere.rs
sdf/src/traits/: dyn_wrap.rs  helpers.rs  info.rs  intersect.rs  invert.rs  mod.rs  remove.rs  rotate2d.rs  rotate3d.rs  round.rs  scale.rs  smooth_unions.rs  translate.rs  unions.rs
src/: main.rs
vectors/: Cargo.toml
vectors/src/: constructors.rs  iterators.rs  lib.rs  operators.rs
yew/: Cargo.toml  LICENSE-MIT  README.md
yew/src/: main.rs  models.rs
yew/src/configs/: mod.rs
yew/src/configs/rays/: cameras.rs  mod.rs
yew/src/screen/: canvas_draw.rs  mod.rs
