[package]
name = "marchrs_iterators"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
proptest = "1.5.0"
