[package]
name = "marchrs_rays"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
marchrs_sdf = { version = "0.1.0", path = "../sdf" }
marchrs_vectors = { version = "0.1.0", path = "../vectors" }
marchrs_iterators = { version = "0.1.0", path = "../iterators" }
rayon = "1.10.0"
