[package]
name = "marchrs_vectors"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rayon = "1.10.0"
marchrs_iterators = { version = "0.1.0", path = "../iterators" }
